# treemind

./: .gitignore  LICENSE  README.md  algo3.md  alog.md  breast_cancer.ipynb  check_plot.py  debugging.py  deneme copy 3.ipynb  deneme copy.ipynb  deneme.ipynb  experiment.ipynb  explainer.py  plots.py  pyproject.toml  setup.py  test.py
.github/workflows/: build_wheels.yml
docs/: Makefile  requirements.txt
docs/source/: algorithm.rst  api_reference.rst  conf.py  example.rst  experiment.rst  explainer.rst  getting_started.rst  index.rst  performance.rst  plot.rst
docs/source/experiments/: experiment_0.rst  experiment_1.rst  experiment_2.rst  experiment_3.rst  experiment_4.rst  experiment_main.rst
docs/source/plots/: bar_plot.rst  feature_plot.rst  interaction_plot.rst  interaction_scatter_plot.rst  plot.rst  range_plot.rst
examples/: README.md  breast_cancer.ipynb  examples_plot.py  experiment.ipynb
tree_explainer/: __init__.py  explainer.py  explainer_backup.py  explainer_cython.cpp  explainer_cython.pyx  plots.py  plots2.py
tree_explainer/algorithm/: explainer.pxd  explainer.pyi  explainer.pyx  utils.pxd  utils.pyx
tree_explainer/plot/: __init__.py  plot_funcs.py  plot_utils.py
tree_explainer/src/: __init__.py  explainer.cpp  explainer.pxd  explainer.pyi  explainer.pyx  lgb.cpp  lgb.pxd  lgb.pyx  rule.cpp  rule.pxd  rule.pyx  utils.cpp  utils.pxd  utils.pyx  xgb.pxd  xgb.pyx
treemind/: __init__.py
treemind/algorithm/: __init__.py  cb.pxd  cb.pyx  explainer.pxd  explainer.py  explainer.pyi  explainer.pyx  lgb.pxd  lgb.pyx  perp.pxd  perp.pyx  rule.pxd  rule.pyx  sk.pxd  sk.pyx  utils.pxd  utils.pyx  xgb.pxd  xgb.pyx
treemind/plot/: __init__.py  _feature_plot.py  _importance_plot.py  _interaction_plot.py  _interaction_scatter_plot.py  plot_funcs.py  plot_utils.py
