[project]
name = "treemind"
version = "0.2.0"

dependencies = [
    "numpy>=1.24.4",
    "pandas>=1.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm"
]
authors = [
    { name = "Samet Copur", email = "sametcopur@yahoo.com" },
]
description = "feature and feature interaction analyzer for gradient boosting"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = [
    "python",
    "data-science",
    "machine-learning",
    "machine-learning-library",
    "explainable-ai",
    "gradient boosting",
]

requires-python = ">=3.9"

[project.urls]
Documentation = "https://treemind.readthedocs.io/en/latest/"
Repository = "https://github.com/sametcopur/treemind"
Tracker = "https://github.com/sametcopur/treemind/issues"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"